[jspit/colorboop] deny subjective plane

--- a/jspit/colorboop.html
+++ b/jspit/colorboop.html
@@ -51,6 +51,9 @@
 
       </aside>
     </main>
+    <style>
+      .plane.meme { display: none }
+    </style>
 
     <div class="buttonbar moves left"></div>
     <div class="buttonbar actions right float"></div>
