--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -92,21 +92,12 @@
 
         .plane { display: none }
         .plane[data-plane="domgeon-inspect"],
-        .plane.lit, .plane.meme { display: initial }
+        .plane.meme { display: initial }
 
-        .plane.lit .tile[data-fov] {
-          visibility: visible;
-          opacity: var(--light, 0);
-        }
-        .plane.lit .tile:not([data-fov]) { visibility: hidden; }
+        .plane.meme .tile { opacity: 20%; }
+        .plane.meme .tile[data-light] { opacity: var(--light, 0); }
 
-        .plane.meme .tile {
-          visibility: visible;
-          opacity: 20%;
-        }
-
-        .plane[data-plane="solid-meme"] { z-index: 1 }
-        .plane[data-plane="solid"]      { z-index: 10 }
+        .plane[data-plane="domgeon-inspect"] { z-index: 1000 }
 
       </style>
 
