--- a/jspit/dla.html
+++ b/jspit/dla.html
@@ -38,19 +38,16 @@
         .tile.input         { z-index: 1000 }
 
         .plane { display: none }
-        .plane[data-plane="domgeon-inspect"],
-        .plane.lit, .plane.meme { display: initial }
 
-        .grid.playing .tile.particle[data-fov] {
-          visibility: visible;
-          opacity: var(--light, 0);
-        }
-        .grid.playing .tile.particle:not([data-fov]) { visibility: hidden; }
+        .plane[data-plane="domgeon-inspect"] { display: initial }
 
-        .grid.playing .plane.meme .tile {
-          visibility: visible;
-          opacity: 20%;
-        }
+        .grid:not(.playing) .plane:not(.meme) { display: initial }
+        .grid.playing .plane.meme { display: initial }
+
+        .grid.playing .tile.particle[data-light]       { opacity: var(--light, 15%); }
+        .grid.playing .tile.particle:not([data-light]) { opacity: 15%; }
+
+        .tile.mover { --lightInit: 8; }
 
         .plane[data-plane="solid-meme"] { z-index: 1 }
         .plane[data-plane="solid"]      { z-index: 10 }
