--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -8,131 +8,124 @@
   </head>
   <body>
 
-    <main>
-      <div class="grid">
-        <noscript>
-          <section>
-            <h3 class="error">DOMgeoneering requires JavaScript</h3>
-          </section>
-        </noscript>
-      </div>
-
-      <aside class="menu">
-        <button
-          class="sticky"
-          style="float: right; font-size: 2em; line-height: 0.75"
-          data-keycode="Escape"
-          title="Start/Stop Game ; Hide/Show Menu">☰</button>
-
+    <div class="grid">
+      <noscript>
         <section>
-          <h1>Cascading DOMgeon Template</h1>
-          <h3><a href="index.html">Back to Welcome screen</a></h3>
-
-          <p>
-            Press &lt;Escape&gt; to start/hide this menu, press it again to return to this menu.
-          </p>
-          <details>
-            <summary>TODO</summary>
-            <ul>
-              <li>the void should be an other plane...</li>
-              <li>things to find and do there</li>
-              <li>...how to return back to the solid plane?</li>
-              <li>maybe inventory and items</li>
-            </ul>
-          </details>
+          <h3 class="error">DOMgeoneering requires JavaScript</h3>
         </section>
+      </noscript>
+    </div>
 
-        <fieldset id="inspector">
-          <legend>
-            <label for="inspector-ids">Tiles @<span data-for="pos">X,Y</span>:</label>
-          </legend>
-          <textarea readonly style="border: none; resize: none; user-select: all; width: 100%;"></textarea>
-        </fieldset>
+    <aside class="menu">
+      <button
+        class="sticky"
+        style="float: right; font-size: 2em; line-height: 0.75"
+        data-keycode="Escape"
+        title="Start/Stop Game ; Hide/Show Menu">☰</button>
 
-      </aside>
+      <section>
+        <h1>Cascading DOMgeon Template</h1>
+        <h3><a href="index.html">Back to Welcome screen</a></h3>
 
-      <style>
-        /* tile stacking priorities */
-        .tile.floor { z-index:  1 }
-        .tile       { z-index:  5 }
-        .tile.wall  { z-index: 10 }
-        .tile.mover { z-index: 20 }
-        .tile.input { z-index: 50 }
+        <p>
+          Press &lt;Escape&gt; to start/hide this menu, press it again to return to this menu.
+        </p>
+        <details>
+          <summary>TODO</summary>
+          <ul>
+            <li>the void should be an other plane...</li>
+            <li>things to find and do there</li>
+            <li>...how to return back to the solid plane?</li>
+            <li>maybe inventory and items</li>
+          </ul>
+        </details>
+      </section>
 
-        main {
-          --grid-bg: hsl(0, 0, 0);
-        }
+      <fieldset id="inspector">
+        <legend>
+          <label for="inspector-ids">Tiles @<span data-for="pos">X,Y</span>:</label>
+        </legend>
+        <textarea readonly style="border: none; resize: none; user-select: all; width: 100%;"></textarea>
+      </fieldset>
 
-        .plane.meme .tile[data-light] {
-          opacity: var(--light, 15%);
-        }
+    </aside>
 
-        .plane.meme .tile:not([data-light]) {
-          opacity: 15%;
-        }
+    <style>
+      /* tile stacking priorities */
+      .tile.floor { z-index:  1 }
+      .tile       { z-index:  5 }
+      .tile.wall  { z-index: 10 }
+      .tile.mover { z-index: 20 }
+      .tile.input { z-index: 50 }
 
-        .tile.floor {
-          background-color: hsl(70, 5%, 12%);
-          color: hsl(70, 5%, 27%);
-        }
+      .plane.meme .tile[data-light] {
+        opacity: var(--light, 15%);
+      }
 
-        .tile.wall {
-          background-color: hsl(50, 15%, 15%);
-          color: hsl(50, 25%, 30%);
-        }
+      .plane.meme .tile:not([data-light]) {
+        opacity: 15%;
+      }
 
-        .tile.mover {
-          color: hsl(20, 75%, 50%);
-        }
-        .tile.mover.input,
-        .tile.mover.inputable {
-          color: hsl(220, 75%, 50%);
-        }
-        .tile.mover.input.focus,
-        .tile.mover.inputable.focused {
-          color: hsl(120, 75%, 50%);
-        }
+      .tile.floor {
+        background-color: hsl(70, 5%, 12%);
+        color: hsl(70, 5%, 27%);
+      }
 
-        .tile.mover {
-          --lightInit: 1;
-        }
-        .tile.mover.input {
-          --lightInit: 2;
-        }
-        .tile.mover.input.focus {
-          --lightInit: 8;
-        }
+      .tile.wall {
+        background-color: hsl(50, 15%, 15%);
+        color: hsl(50, 25%, 30%);
+      }
 
-        .tile.door {
-          background-color: hsl(50, 25%, 15%);
-          color: hsl(50, 90%, 30%);
-          --action: "open";
-          --morph_target: "!passable";
-        }
-        .tile.door::before { content: "+" }
+      .tile.mover {
+        color: hsl(20, 75%, 50%);
+      }
+      .tile.mover.input,
+      .tile.mover.inputable {
+        color: hsl(220, 75%, 50%);
+      }
+      .tile.mover.input.focus,
+      .tile.mover.inputable.focused {
+        color: hsl(120, 75%, 50%);
+      }
 
-        .tile.door.passable {
-          background-color: hsl(70, 5%, 12%);
-          --action: "close";
-        }
-        .tile.door.passable::before { content: "-" }
+      .tile.mover {
+        --lightInit: 1;
+      }
+      .tile.mover.input {
+        --lightInit: 2;
+      }
+      .tile.mover.input.focus {
+        --lightInit: 8;
+      }
 
-        .tile.rune { color: hsl(270, 80%, 65%) }
+      .tile.door {
+        background-color: hsl(50, 25%, 15%);
+        color: hsl(50, 90%, 30%);
+        --action: "open";
+        --morph_target: "!passable";
+      }
+      .tile.door::before { content: "+" }
 
-        .tile.mover.support {
-          text-decoration: underline;
-          text-decoration-style: dotted;
-        }
+      .tile.door.passable {
+        background-color: hsl(70, 5%, 12%);
+        --action: "close";
+      }
+      .tile.door.passable::before { content: "-" }
 
-        .plane { display: none }
-        .plane[data-plane="domgeon-inspect"],
-        .plane.meme { display: initial }
+      .tile.rune { color: hsl(270, 80%, 65%) }
 
-        .plane[data-plane="domgeon-inspect"] { z-index: 1000 }
+      .tile.mover.support {
+        text-decoration: underline;
+        text-decoration-style: dotted;
+      }
 
-      </style>
+      .plane { display: none }
+      .plane[data-plane="domgeon-inspect"],
+      .plane.meme { display: initial }
 
-    </main>
+      .plane[data-plane="domgeon-inspect"] { z-index: 1000 }
+
+    </style>
 
     <div class="buttonbar moves left"></div>
     <div class="buttonbar actions right float"></div>
@@ -143,7 +136,7 @@
       const dmg = window.dmg = new DOMgeon({
         ui: document.body,
         keys: document.body,
-        grid: document.querySelector('main .grid'),
+        grid: document.querySelector('.grid'),
         moveBar: document.querySelector('.buttonbar.moves'),
         actionBar: document.querySelector('.buttonbar.actions'),
         lightLimit: 0.2,
