--- a/jspit/physarum.html
+++ b/jspit/physarum.html
@@ -8,101 +8,98 @@
   </head>
   <body>
 
-    <main>
+    <div class="grid">
+      <noscript>
+        <section>
+          <h3 class="error">Insufficient JavaScript to evolve...</h3>
+        </section>
+      </noscript>
+      <div id="status"></div>
+    </div>
 
-      <div class="grid">
-        <noscript>
-          <section>
-            <h3 class="error">Insufficient JavaScript to evolve...</h3>
-          </section>
-        </noscript>
-        <div id="status"></div>
-      </div>
+    <aside class="menu">
+      <button
+        class="sticky"
+        style="float: right; font-size: 1.5em"
+        title="Start/Stop Simulation ; Hide/Show Menu"
+        data-legend="Esc"
+        data-keycode="Escape">☰</button>
 
-      <aside class="menu">
+      <section>
+        <h1>Physarum Inspired Demo</h1>
+        <h3><a href="index.html">Back to Welcome screen</a></h3>
+
+        Inspired by <a href="//www.sagejenson.com/physarum">Physarum blog post by Sage Jenson</a>
+
+        <p>
+        TODO: expose more settings, and explain what's going on better, in short:
+        </p>
+
+        <ul>
+          <li>particles have a heading</li>
+          <li>particles have a sensor array</li>
+          <li>particles make turning decisions based on the sensed values</li>
+          <li>particles deposit some amount in their outgoing cell when moving</li>
+          <li>the world undergoes diffusion and exponential decay</li>
+        </ul>
+
+      </section>
+
+      <fieldset><legend>Settings</legend><dl>
+
+        <dt>Colors</dt>
+        <dd><label for="trail-hue">
+          Trail:
+          <input id="trail-hue" type="range" min="0" max="360" step="1" />
+        </label></dd>
+
+      </dl></fieldset>
+
+      <section>
+        <label for="singleStep"><input id="singleStep" type="checkbox" /> SingleStep</label>
         <button
-          class="sticky"
-          style="float: right; font-size: 1.5em"
-          title="Start/Stop Simulation ; Hide/Show Menu"
-          data-legend="Esc"
-          data-keycode="Escape">☰</button>
+          title="Reset game world state"
+          data-keycode="Backspace"
+          data-legend="BS">Reset</button>
+      </section>
 
-        <section>
-          <h1>Physarum Inspired Demo</h1>
-          <h3><a href="index.html">Back to Welcome screen</a></h3>
+    </aside>
 
-          Inspired by <a href="//www.sagejenson.com/physarum">Physarum blog post by Sage Jenson</a>
+    <style>
+      .tile.trail {
+        z-index: 0;
+        --trail-hue: 240;
+        color:            hsl(var(--trail-hue), 80%, var(--light, 50%));
+        background-color: hsl(var(--trail-hue), 50%, var(--light, 50%));
+      }
 
-          <p>
-          TODO: expose more settings, and explain what's going on better, in short:
-          </p>
+      .tile.trail { --light: var(--value) }
 
-          <ul>
-            <li>particles have a heading</li>
-            <li>particles have a sensor array</li>
-            <li>particles make turning decisions based on the sensed values</li>
-            <li>particles deposit some amount in their outgoing cell when moving</li>
-            <li>the world undergoes diffusion and exponential decay</li>
-          </ul>
-
-        </section>
-
-        <fieldset><legend>Settings</legend><dl>
-
-          <dt>Colors</dt>
-          <dd><label for="trail-hue">
-            Trail:
-            <input id="trail-hue" type="range" min="0" max="360" step="1" />
-          </label></dd>
-
-        </dl></fieldset>
-
-        <section>
-          <label for="singleStep"><input id="singleStep" type="checkbox" /> SingleStep</label>
-          <button
-            title="Reset game world state"
-            data-keycode="Backspace"
-            data-legend="BS">Reset</button>
-        </section>
-
-      </aside>
-
-      <style>
-        .tile.trail {
-          z-index: 0;
-          --trail-hue: 240;
-          color:            hsl(var(--trail-hue), 80%, var(--light, 50%));
-          background-color: hsl(var(--trail-hue), 50%, var(--light, 50%));
-        }
-
-        .tile.trail { --light: var(--value) }
-
-        .tile.sense {
-          border: 0.1em solid var(--magenta);
-          color: var(--magenta);
-          background-color: rgba(var(--magenta-rgb), var(--sensed, 0%));
-        }
-        .tile.ghost {
-          display: none;
-        }
-        .tile.particle.live {
-          z-index: 10;
-          --particle-hue: 120;
-          color:            hsl(var(--particle-hue), 80%, 50%);
-          /* background-color: hsl(var(--particle-hue), 50%, 50%); */
-          transform: rotate(calc(var(--heading) - 0.5turn));
-        }
-        body.running .tile.particle.live,
-        body.running .tile.sense {
-          display: none;
-        }
-        label[for="trail-hue"] {
-          color: var(--black);
-          padding: 0 2em;
-          background-color: hsl(240, 50%, 50%);
-        }
-      </style>
-    </main>
+      .tile.sense {
+        border: 0.1em solid var(--magenta);
+        color: var(--magenta);
+        background-color: rgba(var(--magenta-rgb), var(--sensed, 0%));
+      }
+      .tile.ghost {
+        display: none;
+      }
+      .tile.particle.live {
+        z-index: 10;
+        --particle-hue: 120;
+        color:            hsl(var(--particle-hue), 80%, 50%);
+        /* background-color: hsl(var(--particle-hue), 50%, 50%); */
+        transform: rotate(calc(var(--heading) - 0.5turn));
+      }
+      body.running .tile.particle.live,
+      body.running .tile.sense {
+        display: none;
+      }
+      label[for="trail-hue"] {
+        color: var(--black);
+        padding: 0 2em;
+        background-color: hsl(240, 50%, 50%);
+      }
+    </style>
 
     <script type="module">
       import Physarum from './physarum';
@@ -115,7 +112,7 @@
         getSelect: (name) => document.querySelector(`select#${name}`),
       };
 
-      const gridSheet = document.querySelector('main style').sheet;
+      const gridSheet = document.querySelector('body style').sheet;
 
       for (const {selectorText, style} of gridSheet.cssRules)
         if (selectorText === '.tile.trail')
@@ -124,7 +121,7 @@
       const dmg = window.dmg = new DOMgeon({
         ui: document.body,
         keys: document.body,
-        grid: document.querySelector('main .grid'),
+        grid: document.querySelector('.grid'),
       });
 
       const status = document.querySelector('#status');
