[cdom-template] hard black grid background

--- a/cdom-template/index.html
+++ b/cdom-template/index.html
@@ -58,6 +58,10 @@
       .tile.mover { z-index: 20 }
       .tile.input { z-index: 50 }
 
+      .grid {
+        --grid-bg: hsl(0, 0, 0);
+      }
+
       .plane.meme .tile[data-light] {
         opacity: var(--light, 15%);
       }
