[jspit] add bsp demo

--- a/jspit/index.html
+++ b/jspit/index.html
@@ -46,7 +46,10 @@
             <dt><a href="physarum.html">Physarum</a></dt><dd>
               Just had to implement a <a
                 href="//www.sagejenson.com/physarum">Physarum</a> sim
-              when I saw it</dd>
+              when I saw it.</dd>
+
+            <dt><a href="bsp.html">BSP Procgen</a></dt><dd>
+              Binary Space Partition driven level generation.</dd>
 
           </dl>
         </section>
