--- a/forest/index.html
+++ b/forest/index.html
@@ -143,7 +143,7 @@
 
       function forestShader(grid, pos, rect) {
         floorShader(grid, pos, rect);
-        if (Math.random() < .25) {
+        if (Math.random() < .25 && !(pos.x === 50 && pos.y === 50)) {
           treeShader(grid, pos, rect);
         }
       }
